WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310204
[GLIB] Fix access to ASCIILiteral characters in WebKitWebViewSessionState
https://bugs.webkit.org/show_bug.cgi?id=310204
Summary
[GLIB] Fix access to ASCIILiteral characters in WebKitWebViewSessionState
Claudio Saavedra
Reported
2026-03-18 12:49:27 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-03-18 12:50:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60878
EWS
Comment 2
2026-03-18 13:46:02 PDT
Committed
309500@main
(3ff40fde87aa): <
https://commits.webkit.org/309500@main
> Reviewed commits have been landed. Closing PR #60878 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug