[GLIB] Fix access to ASCIILiteral characters in WebKitWebViewSessionState https://bugs.webkit.org/show_bug.cgi?id=310204

Reviewed by Michael Catanzaro.

This was obscured by the G_VARIANT_TYPE() cast.

* Source/WebKit/UIProcess/API/glib/WebKitWebViewSessionState.cpp:
(decodeSessionState):

Canonical link: https://commits.webkit.org/309500@main